# shuttl

./: .gitignore  CHANGELOG.md  LICENSE  README.md  eslint.config.mjs  git_syncer.yaml  go.work  go.work.sum  migrations.json  nx  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  shuttl.json  tsconfig.base.json
.github/workflows/: release.yml
apps/cli/: CHANGELOG.md  README.md  go.mod  go.sum  main.go  package.json  project.json
apps/cli/auth/: auth.go  auth_test.go
apps/cli/cmd/: build.go  dev.go  generate.go  login.go  root.go  serve.go  version.go
apps/cli/config/: config.go  config_test.go  user_config.go  user_config_test.go
apps/cli/ipc/: Chat.go  GetAgents.go  client.go  client_test.go  get_models.go  get_prompts.go  get_toolkits.go  get_tools.go  get_triggers.go  invoke_trigger.go  types.go  types_test.go
apps/cli/log/: log.go  log_test.go
apps/cli/scripts/: publish.sh
apps/cli/tui/: agent_picker.go  chat.go  debug.go  logs.go  model.go  styles.go  types.go
apps/docs/: README.md  mkdocs.yml  project.json  pyproject.toml
apps/docs/docs/: index.md
apps/docs/docs/cli/: commands.md  index.md
apps/docs/docs/concepts/: agents.md  index.md  models.md  outcomes.md  tools.md  triggers.md
apps/docs/docs/examples/: index.md  scheduled-tasks.md  weather-agent.md
apps/docs/docs/getting-started/: deployment.md  first-agent.md  installation.md  quickstart.md
apps/docs/docs/stylesheets/: custom.css
tooling/git_syncer/: README.md  project.json  pyproject.toml
tooling/git_syncer/git_syncer/: __init__.py  config.py  git_ops.py  main.py  syncer.py
tooling/git_syncer/tests/: __init__.py  conftest.py  test_config.py  test_git_ops.py
